tests/base/invalid/Switch_Invalid_7.whiley
int f([byte] data, int pos):
    method = data[pos]
    pos = pos + 1
    switch method:
        case 0: 
            // None 
            return 1
        case 1: 
            // None 
            return 0
    return 2

